# cargo-semver-hook

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: main.rs
